# restaurant-recommendation-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: app.py
app/pages/: 1_EDA.py  2_Recommender.py  3_Insights.py
notebooks/: 01_data_audit.ipynb  02_build_profiles.ipynb  03_modeling_tfidf.ipynb  04_evaluation.ipynb
restaurant_reco.egg-info/: PKG-INFO  SOURCES.txt
src/: config.py  evaluation.py  feature_engineering.py  ingestion.py  pipeline_build.py  preprocessing.py  recommender.py  utils.py
src/components/: plotting.py  ui_helpers.py
tests/: test_preprocessing.py  test_recommender.py
