[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant_reco"
version = "0.1.0"
description = "Restaurant recommendation system"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src", "app"]

[tool.setuptools.package-dir]
src = "src"